# rust_fullstack_collections

./: README.md
ai_rust_fullstack/frontend/: Cargo.toml
backend/: .gitignore  Cargo.toml
backend/src/: handler.rs  main.rs  model.rs  openai_api.rs
blockchain_rust_fullstack/: cargo.toml
blockchain_rust_fullstack/blockchain/: Anchor.toml  package-lock.json
blockchain_rust_fullstack/blockchain/programs/blockchain/src/: lib.rs
blockchain_rust_fullstack/blockchain/tests/: blockchain.js  blockchain.ts
blockchain_rust_fullstack/frontend/: Cargo.toml
blockchain_rust_fullstack/frontend/src/: main.rs
blockchain_rust_fullstack/frontend/src/components/: mod.rs  todo_container.rs
blockchain_rust_fullstack/frontend/src/models/: accounts.rs
blockchain_rust_fullstack/server/: Cargo.toml
blockchain_rust_fullstack/server/src/: handler.rs  main.rs  model.rs
frontend/: Cargo.toml
frontend/src/: main.rs
