[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.6.4", features = ["cors"] }
tracing = "0.1.41"
serde_json = "1.0.140"
