[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-lang = "0.31.1"
axum = "0.8.4"
bs58 = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
solana-client = "2.2.7"
solana-sdk = "2.2.2"
tokio = { version = "1.45.1", features = ["full"] }
