[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = "0.31.1"
axum = "0.8.4"
borsh = "0.10.0"
bs58 = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }

blockchain = { path = "../blockchain/programs/blockchain", features = [
  "no-entrypoint",
] }
anyhow = "1.0.98"
